# Vizza

./: .cursorrules  .prettierignore  .prettierrc  2d_fluid_sim.js  CLAUDE.md  GPU_BOILERPLATE_COMPARISON.md  MICROBIAL_ECOSYSTEM_DESIGN.md  README.md  TESTS.md  TODO.md  cat  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  run-snapshot-tests.sh  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/slime-mold/: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  build_wasm.sh  index.html
src-tauri/slime-mold/src/: app.rs  egui_tools.rs  gpu_state.rs  gradient_editor.rs  lib.rs  main.rs  presets.rs  settings.rs  simulation.rs
src-tauri/slime-mold/src/render/: mod.rs  pipeline_manager.rs  shader_manager.rs
src-tauri/slime-mold/src/shaders/: compute.wgsl  gradient.wgsl
src-tauri/src/: error.rs  lib.rs  main.rs  main_menu_renderer.rs  simulation_manager.rs  snapshot_test_runner.rs
src-tauri/src/commands/: app_settings.rs  camera.rs  colors_schemes.rs  crystal_growth.rs  ecosystem.rs  flow.rs  gradient.rs  gray_scott.rs  interaction.rs  luts.rs  mod.rs  moire.rs  particle_life.rs  pellets.rs  presets.rs  primordial_particles.rs  rendering.rs  reset.rs  settings.rs  simulation.rs  slime_mold.rs  utility.rs  voronoi_ca.rs
src-tauri/src/simulation/: lut_manager.rs  manager.rs  mod.rs  preset_manager.rs  render_loop.rs
src-tauri/src/simulations/: mod.rs  traits.rs
src-tauri/src/simulations/ecosystem/: commands.rs  mod.rs  settings.rs  simulation.rs
src-tauri/src/simulations/ecosystem/shaders/: agent_update.wgsl  background.wgsl  biomass_particles.wgsl  chemical_diffusion.wgsl  fluid_dynamics.wgsl  food_particles.wgsl  mod.rs  render.wgsl
src-tauri/src/simulations/flow/: mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/flow/shaders/: background_render.wgsl  flow_vector_compute.wgsl  mod.rs  particle_render.wgsl  particle_update.wgsl  render.wgsl  shape_drawing.wgsl  trail_decay_diffusion.wgsl  trail_render.wgsl
src-tauri/src/simulations/fluids/: mod.rs  renderer.rs  settings.rs  simulation.rs
src-tauri/src/simulations/fluids/shaders/: advect.wgsl  background_render.wgsl  display.wgsl  divergence.wgsl  dye_advect.wgsl  jacobi.wgsl  mod.rs  projection.wgsl  seed_dye.wgsl  seed_velocity.wgsl
src-tauri/src/simulations/gradient/: mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/gradient/shaders/: gradient.wgsl  mod.rs
src-tauri/src/simulations/gray_scott/: mod.rs  presets.rs  renderer.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/gray_scott/shaders/: background_render.wgsl  mod.rs  noise_seed.rs  noise_seed.wgsl  paint.wgsl  paint_compute.rs  reaction_diffusion.rs  reaction_diffusion.wgsl  render.rs  render.wgsl  render_3x3.wgsl  render_infinite.wgsl
src-tauri/src/simulations/main_menu/: mod.rs  simulation.rs
src-tauri/src/simulations/main_menu/shaders/: combined.wgsl  fragment.wgsl  mod.rs  vertex.wgsl
src-tauri/src/simulations/moire/: compute.wgsl  mod.rs  settings.rs  shaders.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/particle_life/: matrix_operations.rs  mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/particle_life/shaders/: background_render.wgsl  compute.wgsl  fade_fragment.wgsl  fade_vertex.wgsl  force_randomize.wgsl  force_update.wgsl  fragment.wgsl  init.wgsl  mod.rs  post_effect.wgsl  tile_render.wgsl  vertex.wgsl
src-tauri/src/simulations/pellets/: mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/pellets/shaders/: background_render.wgsl  density_compute.wgsl  grid_clear.wgsl  grid_populate.wgsl  mod.rs  particle_fragment.wgsl  particle_fragment_render.wgsl  particle_render.wgsl  particle_vertex.wgsl  physics_compute.wgsl  post_effect_fragment.wgsl  post_effect_vertex.wgsl  render.wgsl  (+3 more)
src-tauri/src/simulations/primordial_particles/: mod.rs  settings.rs  simulation.rs  state.rs
src-tauri/src/simulations/shared/: average_color.rs  average_color.wgsl  blur_filter.wgsl  buffer_utils.rs  camera.rs  camera_state.rs  color_lut_utils.wgsl  color_scheme.rs  coordinates.rs  cursor.rs  gpu_utils.rs  infinite_render.wgsl  lut.rs  lut_handler.rs  lut_manager.rs  lut_state.rs  mod.rs  mouse_interaction.rs  ping_pong_buffers.rs  ping_pong_render_textures.rs  ping_pong_textures.rs  position_generators.rs  post_processing.rs  random_seed.rs  timing.rs  types.rs
src-tauri/src/simulations/slime_mold/: buffer_pool.rs  commands.rs  frame_pacing.rs  gpu_state.rs  lut_manager.rs  mod.rs  presets.rs  settings.rs  simulation.rs  state.rs  tests.rs  webcam.rs  workgroup_optimizer.rs
src-tauri/src/simulations/space_colonization/: mod.rs  presets.rs  settings.rs  simulation.rs
src-tauri/src/simulations/voronoi_ca/: mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/src/simulations/wanderers/: mod.rs  settings.rs  simulation.rs  state.rs  tests.rs
src-tauri/tests/: README.md  snapshot_tests.rs
(+120 files in other folders)
