[package]
name = "sim_pix"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
license = "MIT"
repository = "https://github.com/Velfi/sim_pix"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde_json = "1.0"
pretty_env_logger = "0"
wgpu = "24"
bytemuck = { version = "1.23.0", features = ["derive"] }
winit = "0.30"
tracing-subscriber = "0.3"
toml = "0.8.23"
tracing = "0.1.41"
serde = "1.0.219"
lazy_static = "1.5.0"
tokio = { version = "1.45.1", features = ["full", "macros"] }
dirs = "6.0.0"
rand = "0.9.1"
pollster = "0.3"
num_cpus = "1.17.0"
rayon = "1.10.0"
nalgebra = "0.33.2"
futures-intrusive = "0.5"
futures = "0.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
