[package]
name = "Vizzy"
version = "0.2.0"
description = "A desktop application featuring interactive simulations built with Tauri, Svelte, and WebGPU."
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
license = "MIT"
repository = "https://github.com/Velfi/vizzy"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
dirs = "6.0.0"
include_dir = "0.7"
lazy_static = "1.5.0"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "macros"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3"
wgpu = "24"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
