[package]
name = "Vizza"
version = "0.11.1"
description = "A desktop application featuring interactive simulations built with Tauri, Svelte, and WebGPU."
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
license = "MIT"
repository = "https://github.com/Velfi/Vizza"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
dirs = "6"
include_dir = "0.7"
lazy_static = "1.5"
noise = "0.9"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "2.4"
tauri-plugin-shell = "2.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "macros"] }
toml = "0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3"
wgpu = "26"
image = "0.25"
nokhwa = { version = "0.10", features = ["input-native", "output-wgpu"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Enable nightly SIMD features for better performance
simd-nightly = []
