[package]
name = "slime-mold"
version = "2.0.0-beta.2"
authors = ["Zelda Hessler <zelda.hessler@tempus.com>"]
edition = "2024"
description = "A simulation of slime mold"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "simulation"
harness = false

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
dirs = "5.0"
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
lazy_static = "1.5.0"
parking_lot = "0.12.4"
pollster = "0.4.0"
rand = { version = "0.9.1", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = { version = "24.0.5" }
winit = { version = "0.30.11" }


# When compiling to WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
egui-winit = { version = "0.31.1", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
log = "0.4.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
] }
web-time = "1.1"

# When compiling to native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.31.1" }


[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = "0.6.0"
